--- a/base.css
+++ b/base.css
@@ -1,18 +1,31 @@
 body {
-    margin: auto;
     font-family: 'Courier New', Courier, monospace;
-    background-color: blue;
-    color: black;
+    margin: 0%;
+    padding: 0%;
 }
 
 header, footer {
     background-color: blueviolet;
-    padding: auto;
+    color: aliceblue;
+    padding: 15px;
     text-align: center;
+}
+
+nav a{
+    color: aliceblue;
+    text-decoration: none;
+    margin: auto;
+}
+
+nav a:hover{
+    text-decoration: underline;
+}
+
+main{
+    background-color: blanchedalmond;
 
 }
 
-a {
-    background-color: brown;
-    text-decoration: none;
+footer{
+    font-size: medium;
 }
