--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,11 @@ video{
     max-width: 100;
     border-radius: 8px;
 }
+
+.works_on_smartphone {
+  flex-direction: column;
+}
+
+.works_on_smartphone main {
+  flex-direction: column;
+}
